# tests

task01/: Cargo.toml  config.yaml
task01/src/: main.rs
task02/: Cargo.toml  README.md  config.yaml
task02/src/: main.rs
task03/: Cargo.toml  README.md  config.yaml
task03/src/: main.rs
