[package]
name = "test-task"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bs58 = "0.5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
futures = { version = "0.3", features = ["std"] }
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
solana-client = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.0", features = ["full"] }
yellowstone-grpc-client = "1.1.0"
yellowstone-grpc-proto = "1.1.0"